--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>航站 - 前端导航网站</title>
   <link rel="stylesheet" href="./style.css">
+  <style type="text/css">
+    .icon {
+      width: 1em;
+      height: 1em;
+      vertical-align: -0.15em;
+      fill: currentColor;
+      overflow: hidden;
+    }
+  </style>
 </head>
 
 <body>
@@ -37,13 +46,19 @@
         </div>
       </li>
       <li>
-        <div class="addButton"></div>
-        <div class="addIcon"></div>
-        <div class="text">新增网站</div>
+        <div class="addButton">
+          <div class="addIcon">
+            <svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-iconjia"></use>
+            </svg>
+          </div>
+          <div class="text">新增网站</div>
+        </div>
       </li>
     </ul>
   </main>
 
+  <script src="//at.alicdn.com/t/font_2149045_fb5dne9yzpl.js"></script>
   <script src="./main.js"></script>
 </body>
 
