--- a/src/index.html
+++ b/src/index.html
@@ -21,31 +21,15 @@
 
 <body>
   <header class="globalHeader">
-    <input type="text">
-    <button>搜索</button>
+    <form class="searchForm" method="get" action="https://www.baidu.com/s">
+      <input type="text" name="wd">
+      <button type="submit">搜索</button>
+    </form>
   </header>
 
   <main class="globalMain">
     <ul class="siteList">
-      <li>
-        <div class="site">
-          <div class="logo">A</div>
-          <div class="link">acfun.cn</div>
-        </div>
-      </li>
-      <li>
-        <div class="site">
-          <div class="logo">B</div>
-          <div class="link">bilibili.com</div>
-        </div>
-      </li>
-      <li>
-        <div class="site">
-          <div class="logo">B</div>
-          <div class="link">bilibili.com</div>
-        </div>
-      </li>
-      <li>
+      <li class="last">
         <div class="addButton">
           <div class="addIcon">
             <svg class="icon" aria-hidden="true">
@@ -59,6 +43,7 @@
   </main>
 
   <script src="//at.alicdn.com/t/font_2149045_fb5dne9yzpl.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./main.js"></script>
 </body>
 
