--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,9 @@
 <body>
   <header class="globalHeader">
     <form class="searchForm" method="get" action="https://www.baidu.com/s">
-      <input type="text" name="wd">
+      <label>
+        <input type="text" name="wd">
+      </label>
       <button type="submit">搜索</button>
     </form>
   </header>
