--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport"
     content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>航站 - 前端导航网站</title>
+  <title>多多前端导航网站</title>
   <link rel="stylesheet" href="./style.css">
   <style type="text/css">
     .icon {
@@ -34,7 +34,7 @@
       <li class="last">
         <div class="addButton">
           <div class="addIcon">
-            <svg class="icon" aria-hidden="true">
+            <svg class="icon" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true">
               <use xlink:href="#icon-iconjia"></use>
             </svg>
           </div>
