--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,13 @@
     </ul>
   </main>
 
+  <div class="mainStyle">
+    <div class="cube01"></div>
+    <div class="cube02"></div>
+    <div class="cube03"></div>
+    <div class="cube04"></div>
+  </div>
+
   <script src="//at.alicdn.com/t/font_2149045_e8iwn2vjzmu.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./main.js"></script>
